syntax = "proto3";

package identity.platform.api.tenant;

import "google/api/annotations.proto";
import "google/protobuf/field_mask.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/canonical/tenant-service/api/tenant/v0;tenantv0";

service TenantService {
  // Public Endpoints
  rpc ListMyTenants(ListMyTenantsRequest) returns (ListMyTenantsResponse) {
    option (google.api.http) = {
      get: "/api/v0/me/tenants"
    };
  }

  rpc InviteMember(InviteMemberRequest) returns (InviteMemberResponse) {
    option (google.api.http) = {
      post: "/api/v0/tenants/{tenant_id}/invites"
      body: "*"
    };
  }

  // Internal Admin Endpoints
  rpc ListTenants(ListTenantsRequest) returns (ListTenantsResponse) {
    option (google.api.http) = {
        get: "/api/v0/tenants"
    };
  }

  rpc ListUserTenants(ListUserTenantsRequest) returns (ListUserTenantsResponse) {
    option (google.api.http) = {
        get: "/api/v0/users/{user_id}/tenants"
    };
  }

  rpc ListTenantUsers(ListTenantUsersRequest) returns (ListTenantUsersResponse) {
    option (google.api.http) = {
        get: "/api/v0/tenants/{tenant_id}/users"
    };
  }

  rpc CreateTenant(CreateTenantRequest) returns (CreateTenantResponse) {
    option (google.api.http) = {
        post: "/api/v0/tenants"
        body: "*"
    };
  }

  rpc UpdateTenant(UpdateTenantRequest) returns (UpdateTenantResponse) {
    option (google.api.http) = {
        patch: "/api/v0/tenants/{tenant.id}"
        body: "*"
    };
  }

  rpc DeleteTenant(DeleteTenantRequest) returns (google.protobuf.Empty) {
    option (google.api.http) = {
        delete: "/api/v0/tenants/{tenant_id}"
    };
  }

  rpc ProvisionUser(ProvisionUserRequest) returns (ProvisionUserResponse) {
      option (google.api.http) = {
          post: "/api/v0/tenants/{tenant_id}/users"
          body: "*"
      };
  }

  rpc UpdateTenantUser(UpdateTenantUserRequest) returns (UpdateTenantUserResponse) {
    option (google.api.http) = {
        patch: "/api/v0/tenants/{tenant_id}/users/{user_id}"
        body: "*"
    };
  }
}

// Messages

message UpdateTenantUserRequest {
  string tenant_id = 1;
  string user_id = 2;
  string role = 3;
}

message UpdateTenantUserResponse {
  TenantUser user = 1;
}

message ListMyTenantsRequest {}

message ListMyTenantsResponse {
    repeated Tenant tenants = 1;
}

message ListTenantsRequest {}

message ListTenantsResponse {
    repeated Tenant tenants = 1;
}

message Tenant {
    string id = 1;
    string name = 2;
    string created_at = 3;
    bool enabled = 4;
}

message InviteMemberRequest {
    string tenant_id = 1;
    string email = 2;
    string role = 3; // owner, admin, member
}

message InviteMemberResponse {
    string status = 1;
    string link = 2;
    string code = 3;
}

message ListUserTenantsRequest {
    string user_id = 1;
}

message ListUserTenantsResponse {
    repeated Tenant tenants = 1;
}

message CreateTenantRequest {
    string name = 1;
}

message CreateTenantResponse {
    Tenant tenant = 1;
}

message UpdateTenantRequest {
    Tenant tenant = 1;
    google.protobuf.FieldMask update_mask = 2;
}

message UpdateTenantResponse {
    Tenant tenant = 1;
}

message DeleteTenantRequest {
    string tenant_id = 1;
}

message ProvisionUserRequest {
    string tenant_id = 1;
    string email = 2;
    string role = 3;
}

message ProvisionUserResponse {
    string status = 1;
}

message ListTenantUsersRequest {
    string tenant_id = 1;
}

message ListTenantUsersResponse {
    repeated TenantUser users = 1;
}

message TenantUser {
    string user_id = 1;
    string email = 2;
    string role = 3;
}
